# SchiffbruchEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  building_with_msvc.bat  compilesfmlandsfgui.sh  config.h.in  vcpkg.json
cmake/: FindSBE.cmake  FindSFML.cmake  SBEConfig.cmake.in
include/: Animation.h  ConcurrentQueue.h  Engine.h  Engine.hpp  GameBase.h  Geom.h  Geom.hpp  Graphic.h  Graphic.hpp  ImageSet.h  Logger.h  Module.h  Module.hpp  NamedList.h  QuadTree.h  ResourceManager.h  ResourceManager.hpp  Sound.h  Sound.hpp  TickControl.h
include/event/: Event.h  EventCore.h  EventHelper.hpp  EventQueue.h  EventUser.h  EventUser.hpp  SFMLEvent.h  SFMLEvent.hpp
include/io/: IOPlugin.hpp
include/sbe/: Animation.hpp  Config.hpp  Engine.hpp  GameBase.hpp  Geom.hpp  ImageSet.hpp  Logger.hpp  Module.hpp  ResourceManager.hpp  ResourceManager.ipp  ScriptingEngine.hpp  Sound.hpp
include/sbe/entity/: Component.hpp  Entity.hpp  EntityID.hpp  EntityManager.hpp  System.hpp
include/sbe/entity/components/: Position.hpp  SFMLDrawables.hpp
include/sbe/entity/systems/: LinearMovement.hpp  SpriteRenderer.hpp
include/sbe/event/: Event.hpp  EventBinder.hpp  EventHelper.hpp  EventUser.hpp  SFMLEvent.hpp  SFMLEventUser.hpp  SFMLKeys.hpp
include/sbe/geom/: Geom.hpp  Helpers.hpp  Point.hpp  PointHelpers.hpp  Rect.hpp  RectHelpers.hpp  SfmlHelpers.hpp
include/sbe/gfx/: Actor.hpp  AnimatedSprite.hpp  Animation.hpp  Camera.hpp  GraphPlotter.hpp  Graphic.hpp  ImageSet.hpp  ImageUtils.hpp  MapPlotter.hpp  Particle.hpp  ParticleAffectors.hpp  ParticleSystem.hpp  Renderer.hpp  Screen.hpp  VertexUtils.hpp
include/sbe/gfx/actors/: AnimationActor.hpp  DrawableActor.hpp  ShapeActor.hpp  SpriteActor.hpp  VertexActor.hpp
include/sbe/gfx/particles/: Affectors.hpp  Effect.hpp  Generators.hpp  GlobalAffectors.hpp  Manipulators.hpp  Members.hpp  Particle.hpp  ParticleSystem.hpp  Renderers.hpp
include/sbe/gfx/particles/effects/: Fire.hpp
include/sbe/io/: IO.hpp  IO.ipp  IOPlugin.hpp  SFistream.hpp
include/sbe/scripting/: PythonEngine.hpp  RubyEngine.hpp
include/sbe/sfg/: ConfigEditor.hpp_  DebugWindow.hpp  FileBrowse.hpp  List.hpp  Message.hpp  MessageHandler.hpp
include/sbe/util/: BoostUUIDHash.hpp  ClassFactory.hpp  ConcurrentQueue.hpp  FactoriesAndManipulators.hpp  Hash.hpp  HashManager.hpp  HashedString.hpp  Meta.hpp  NamedList.hpp  QuadTree.hpp  QuadTree.ipp  SimpleModule.hpp  ThreadPool.hpp  Transformable.hpp
include/sbe/util/console/: Command.hpp  CommandNode.hpp  CommandParser.hpp  Node.hpp  ParameterNode.hpp
include/util/: HashManager.h  HashedString.h  NamedList.h  QuadTree.hpp
misc/: PKGBUILD  PKGBUILD-git  PKGBUILD-msys2  PKGBUILD-sfgui-msys2
scripting/: CMakeLists.txt  Event.i  Geom.i  sbe.i
src/: Animation.cpp  Arial.hpp  CMakeLists.txt  Config.cpp  Engine.cpp  GameBase.cpp  Graphic.cpp  ImageSet.cpp  Logger.cpp  Module.cpp  QuadTree.cpp  ResourceManager.cpp  ResourceManager.ipp  ScriptingEngine.cpp  Sound.cpp
src/entity/: Component.cpp  Entity.cpp  EntityID.cpp  EntityID.hpp  EntityManager.cpp  System.cpp
src/entity/components/: Position.cpp  SFMLDrawables.cpp
src/entity/systems/: LinearMovement.cpp  SpriteRenderer.cpp
src/event/: Event.cpp  EventBinder.cpp  EventCore.cpp  EventCore.h  EventCore.hpp  EventHelper.cpp  EventQueue.cpp  EventQueue.h  EventQueue.hpp  EventUser.cpp  SFMLEvent.cpp  SFMLKeys.cpp
src/geom/: Point.cpp
src/gfx/: Actor.cpp  AnimatedSprite.cpp  Animation.cpp  Camera.cpp  GraphPlotter.cpp  Graphic.cpp  ImageSet.cpp  MapPlotter.cpp  ParticleAffectors.cpp  ParticleSystem.cpp  Renderer.cpp  Screen.cpp
src/gfx/actors/: AnimationActor.cpp  DrawableActor.cpp  ShapeActor.cpp  SpriteActor.cpp  VertexActor.cpp
src/gfx/particles/: Effect.cpp  ParticleSystem.cpp
src/gfx/particles/effects/: Fire.cpp
src/io/: IO.cpp  IO.ipp  SFistream.cpp  TextIO.hpp
src/io/plugins/: ImageIOPlugin.cpp  ImageIOPlugin.hpp  ImageSetIOPlugin.cpp  ImageSetIOPlugin.hpp  ShaderIOPlugin.cpp  ShaderIOPlugin.hpp  SoundIOPlugin.cpp  SoundIOPlugin.hpp  TextureIOPlugin.cpp  TextureIOPlugin.hpp
src/logic/: Action.cpp  Action.hpp
src/modules/: Core.cpp  Core.h  Core.hpp
src/scripting/: PythonEngine.cpp  RubyEngine.cpp
src/sfg/: ConfigEditor.cpp_  DebugWindow.cpp  FileBrowse.cpp  List.cpp  Message.cpp  MessageHandler.cpp
src/util/: FactoriesAndManipulators.cpp  HashManager.cpp  HashedString.cpp  QuadTree.ipp  ThreadPool.cpp  TickControl.cpp  TickControl.h  TickControl.hpp
src/util/console/: Command.cpp  CommandNode.cpp  CommandParser.cpp  Node.cpp  ParameterNode.cpp
